Update deployment image to version 20 and repository to

--- a/bankapp/helm/values.yaml
+++ b/bankapp/helm/values.yaml
@@ -1,7 +1,7 @@
 bankapp:
   image:
-    repo: 415916042243.dkr.ecr.ap-south-1.amazonaws.com/roboshop-web
-    version: 18
+    repo: 423966983147.dkr.ecr.ap-south-1.amazonaws.com/bankapp-demo
+    version: 20
     pullPolicy: IfNotPresent
     gateway: null
   affinity: {}
